--- a/MembershipComponent/force-app/main/default/lwc/punchPassMembershipDatatable/punchPassMembershipDatatable.html
+++ b/MembershipComponent/force-app/main/default/lwc/punchPassMembershipDatatable/punchPassMembershipDatatable.html
@@ -1,17 +1,18 @@
 <template>
-    <lightning-card title={componentTitle}>
+    <lightning-card title={cardTitle}>
         <!-- SPINNER ON LOAD -->
         <lightning-spinner if:true={isLoading} alternative-text="Loading" variant="brand" size="large"></lightning-spinner>
         <!-- ACTIONS -->
         <lightning-button label="Decrement Pass" slot="actions" onclick={handleDecrement}></lightning-button>
         <!-- MEMBERSHIPS -->
+        <div class="slds-var-m-around_xx-small">
         <!-- sldsValidatorIgnoreNextLine -->
-        <lightning-datatable
-            data={punchPasses}
-            columns={cols}
-            key-field="Id"
-            max-row-selection="1"
-            onrowselection={getSelected}
-        ></lightning-datatable>
+            <lightning-datatable
+                data={punchPasses}
+                columns={cols}
+                key-field="Id"
+                onrowselection={getSelected}
+            ></lightning-datatable>
+        </div>
     </lightning-card>
 </template>
