--- a/MembershipComponent/force-app/main/default/lwc/standardMembershipDatatable/standardMembershipDatatable.html
+++ b/MembershipComponent/force-app/main/default/lwc/standardMembershipDatatable/standardMembershipDatatable.html
@@ -1,17 +1,21 @@
 <template>
-    <lightning-card title={componentTitle}>
+    <lightning-card title={cardTitle}>
         <!-- SPINNER ON LOAD -->
         <lightning-spinner if:true={isLoading} alternative-text="Loading" variant="brand" size="large"></lightning-spinner>
         <!-- ACTIONS -->
-        <lightning-button label="Check In" slot="actions" onclick={handleCheckIn}></lightning-button>
+        <div class="slds-var-m-around_xx-small" slot="actions">
+            <lightning-button label="Check In" onclick={handleCheckIn}></lightning-button>
+        </div>
         <!-- MEMBERSHIPS -->
-        <!-- sldsValidatorIgnoreNextLine -->
-        <lightning-datatable
-            data={standardMemberships}
-            columns={cols}
-            key-field="Id"
-            max-row-selection="1"
-            onrowselection={getSelected}
-        ></lightning-datatable>
+        <div class="slds-var-m-around_xx-small">
+            <!-- sldsValidatorIgnoreNextLine -->
+            <lightning-datatable
+                data={standardMemberships}
+                columns={cols}
+                key-field="Id"
+                onrowselection={getSelected}
+                column-widths-mode="auto"
+            ></lightning-datatable>
+        </div>
     </lightning-card>
 </template>
